include/colyseus/predict/reconciler.h

/*
 * Reconciler — server-reconciled rollback for a locally-controlled entity
 * (port of predict/rollback.ts + reconciler.ts, flat-fields face).
 *
 * A pure OBSERVER of an input handle: you mutate + send through the handle
 * (`input->data.x = …; colyseus_input_handle_send(input)`) and the reconciler
 * steps its predicted simulation for each send, buffers nothing itself (the
 * handle's replay ring holds the unacked inputs), and when the server ack
 * advances it rewinds to the authoritative instance + replays the still-
 * unacked inputs — smoothly absorbing mispredictions into per-field visual
 * offsets that decay to zero.
 *
 * The PREDICTED STATE is a schema-instance MIRROR (same vtable as the truth
 * instance): your `step` receives it as a plain struct pointer and mutates
 * fields directly — `((my_player_t*)state)->vy = …`. Numeric and boolean
 * fields participate; the mirror is seeded from the truth instance at
 * construction (string/ref/collection fields stay untouched on the mirror and
 * are NOT reconciled — read those off the raw instance).
 */
typedef struct colyseus_reconciler colyseus_reconciler_t;
struct colyseus_predict;
/* Per-step context (mirrors the server's StepContext — one fixed dt drives
 * both sides). Reused across steps; read inside `step` only. */
typedef struct colyseus_step_ctx {
    double dt;        /* fixed step in SECONDS (1/tickRate) */
    double dt_ms;     /* fixed step in MILLISECONDS */
    int tick;         /* the input's seq — the index of the step being simulated */
    int sub_steps;    /* physics sub-steps per fixed step (>= 1) */
    double sub_dt;    /* dt / sub_steps */
    double sub_dt_ms; /* dt_ms / sub_steps */
    /* true while re-simulating an already-applied input during rollback —
     * one-shot presentation must branch on this (`if (!ctx->is_replay) …`) */
    bool is_replay;
    /* the input's reckon instant (server-clock ms): the per-seq lag-comp stamp
     * when present (replay-deterministic), else the live serverNow() */
    double reckon_time;
    bool lag_comp_active;
    /* backing for colyseus_step_memo (opaque) */
    void* _memo_backing;
} colyseus_step_ctx_t;
/*
 * Memoize a NUMBER on the rollback timeline that replay can't re-derive (an
 * RNG roll, a lag-comp'd collision scalar). `compute(userdata)` runs exactly
 * ONCE — on the live step for this seq — and its result is frozen; every
 * replay of the seq returns the frozen value WITHOUT re-running compute.
 * Return NAN from compute for "nothing this seq". `key` disambiguates
 * multiple memos in one step ("" = the shared key-less slot).
 */
double colyseus_step_memo(const colyseus_step_ctx_t* ctx, const char* key,
    double (*compute)(void* userdata), void* userdata);
int colyseus_step_memo_vec(const colyseus_step_ctx_t* ctx, const char* key,
    int (*compute)(double* out, void* userdata), void* userdata, double* out);
void colyseus_reconciler_free(colyseus_reconciler_t* r);
/*
 * Advance one render frame: follow the handle's epoch (self-reset), poll the
 * server ack (reconcile + replay), decay the correction offsets. Live inputs
 * are stepped eagerly as the handle sends — tick never steps them.
 */
void colyseus_reconciler_tick(colyseus_reconciler_t* r, double now);
/* Rendered value of a numeric field: predicted state interpolated between the
 * two latest steps plus the decaying correction offset. `field` must be one
 * of the reconciled fields (by name). */
double colyseus_reconciler_value(colyseus_reconciler_t* r, const char* field);