include/colyseus/predict/predict.h

/*
 * Predict — passive smoothing of the server stream for entities you DON'T
 * control (port of predict/Predictor.ts, passive engine). One read idiom:
 * colyseus_predict_value(p, instance, field) — lerp / extrapolate / damped /
 * reckon / raw per tracked field, raw instance fallback when untracked.
 *
 * Samples arrive via the schema callbacks layer (listen), stamped on the
 * server-time axis when a clock is present. Call colyseus_predict_tick once
 * per render frame.
 */
typedef struct colyseus_predict colyseus_predict_t;
/* Dead-reckoning step: advance `state` (a scratch schema instance) in place
 * by `dt` seconds; `elapsed_ms` is the absolute server-time at the END of
 * the substep (for time-sampled formulas). */
typedef void (*colyseus_predict_step_fn)(
    colyseus_schema_t* state, double dt, double elapsed_ms, void* userdata);
/*
 * ── Children ────────────────────────────────────────────────────────────
 * Objects created or registered here are DRIVEN by colyseus_predict_tick():
 * one call per frame advances the whole prediction stack instead of four.
 * Predict never frees them — it only drives them — and a child deregisters
 * itself when you free it.
 */

/**
 * Create a reconciler driven by this Predict, and bind the input handle's
 * lag-comp render delay to this Predict's lerp delay (so the server rewinds
 * to the instant this client actually displayed). Prefer this over
 * colyseus_reconciler_create().
 */
colyseus_reconciler_t* colyseus_predict_reconciler(
    colyseus_predict_t* p,
    colyseus_schema_t* truth,
    const colyseus_schema_vtable_t* vtable,
    colyseus_input_handle_t* input,
    colyseus_reconciler_step_fn step,
    const colyseus_reconciler_options_t* options);
/**
 * Optional dead reckoning of a spawn collection's CONFIRMED entities, passed to
 * colyseus_predict_bind_spawns(). With it the store also owns the collection's
 * motion (no separate attach_all_reckon): each confirmed entity forwards by the
 * snapshot age PLUS the entry's measured input lead — 0 for a foreign entity,
 * the exact per-spawn uplink for an owned one (see spawn_time). An owned
 * projectile thus keeps flying the shooter's timeline through the handoff
 * instead of snapping back by lead x velocity.
 */
typedef struct {
    const colyseus_schema_vtable_t* entry_vtable;
    const char* const* fields;
    int field_count;
    /* The step, SHARED with the server — the same motion the store's `step`
     * integrates for pending locals, against a schema scratch. */
    colyseus_predict_step_fn step;
    /* 0 = raw projection, the right default here: a deterministic constant-step
     * projectile rebases exactly, so smoothing only adds lag. */
    double smoothing;
    double substep_ms;              /* 0 -> 16 */
    void* userdata;
} colyseus_spawns_reckon_t;
/**
 * Route a collection's adds/removes into a spawn store AND drive the store
 * from tick(). This is the whole wiring a predicted-spawn collection needs.
 *
 * `reckon` is optional (NULL = confirmed entities read raw, un-reckoned).
 */
void colyseus_predict_bind_spawns(colyseus_predict_t* p, colyseus_spawns_t* spawns,
    colyseus_schema_t* state, const char* collection,
    const colyseus_spawns_reckon_t* reckon);
/** Drive an event channel's settlement (its prune) from tick(). */
void colyseus_predict_drive_events(colyseus_predict_t* p, colyseus_event_channel_t* channel);
/** Drive a spawn store's local-step + TTL eviction from tick(). */
void colyseus_predict_drive_spawns(colyseus_predict_t* p, colyseus_spawns_t* spawns);
/** Stop driving a child (called for you by the child's own free()). */
void colyseus_predict_undrive(colyseus_predict_t* p, void* child);
/**
 * Advance one render frame: drive every child, then the damped/extrapolate
 * clocks and the reckon cache.
 *
 * RETURNS the number of fixed input steps due this frame — send exactly one
 * input per returned step and the client stays on the server's cadence:
 *
 *     int steps = colyseus_predict_tick(predict, now);
 *     for (int i = 0; i < steps; i++) { cmd->moveX = ...; colyseus_input_handle_send(input); }
 *
 * The count is 0 until a reconciler advertises the fixed step, and is capped at
 * 5 per frame (a hitch drops the backlog rather than firing a burst).
 */
int colyseus_predict_tick(colyseus_predict_t* p, double now);
/* Smoothed/predicted RENDER value; falls back to the raw instance field when
 * untracked. */
double colyseus_predict_value(colyseus_predict_t* p, colyseus_schema_t* instance, const char* field);
/* RAW reckoned value at an arbitrary server-time instant (no smoothing
 * offset) — for game logic / lag-comp hit tests. Non-reckon fields ignore
 * `time` and read as colyseus_predict_value. Reckoning into the past clamps
 * to the snapshot. */
double colyseus_predict_value_at(colyseus_predict_t* p, colyseus_schema_t* instance, const char* field, double time);