include/colyseus/predict/spawns.h

/*
 * Predicted-spawn store (port of predict/predictedSpawns.ts) — optimistic,
 * server-reconciled ENTITIES (a fired bullet, a dropped item). Predicted
 * locals live OUTSIDE the schema collection; when the authoritative entity
 * arrives its onAdd is routed here and a pending local is correlated to it —
 * the two collapse onto ONE logical entry with a stable id (key sprites on
 * it; the handoff is invisible).
 *
 * Locals are opaque pointers owned by the app; local_free (optional) runs
 * when an entry that still holds a local dies.
 */
typedef struct colyseus_spawns colyseus_spawns_t;
/*
 * Route the CONFIRMED side of colyseus_spawns_value() somewhere other than a
 * raw field read — colyseus_predict_bind_spawns() points it at its reckon
 * slots so a confirmed entry reads lead-aware instead of at the last decoded
 * snapshot. Pass NULL to restore the raw read.
 */
void colyseus_spawns_bind_reader(colyseus_spawns_t* spawns,
    double (*read)(colyseus_schema_t* server, const char* field, void* userdata),
    void* userdata);