platforms/flutter/colyseus_flutter/lib/src/bindings/colyseus_core.dart


  late final _colyseus_predict_bind_spawnsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<colyseus_predict_t>,
                  ffi.Pointer<colyseus_spawns_t>,
                  ffi.Pointer<colyseus_schema_t>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Pointer<colyseus_spawns_reckon_t>)>>(
      'colyseus_predict_bind_spawns');
  late final _colyseus_predict_bind_spawns =
      _colyseus_predict_bind_spawnsPtr.asFunction<
          void Function(
              ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_spawns_t>,
              ffi.Pointer<colyseus_schema_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<colyseus_spawns_reckon_t>)>();

  /// Drive an event channel's settlement (its prune) from tick().
  void colyseus_predict_drive_events(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_event_channel_t> channel,
  ) {
    return _colyseus_predict_drive_events(
      p,
      channel,
    );
  }

  late final _colyseus_predict_drive_eventsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<colyseus_predict_t>,
                  ffi.Pointer<colyseus_event_channel_t>)>>(
      'colyseus_predict_drive_events');
  late final _colyseus_predict_drive_events =
      _colyseus_predict_drive_eventsPtr.asFunction<
          void Function(ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_event_channel_t>)>();

  /// Drive a spawn store's local-step + TTL eviction from tick().
  void colyseus_predict_drive_spawns(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_spawns_t> spawns,
  ) {
    return _colyseus_predict_drive_spawns(
      p,
      spawns,
    );
  }

  late final _colyseus_predict_drive_spawnsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<colyseus_predict_t>,
                  ffi.Pointer<colyseus_spawns_t>)>>(
      'colyseus_predict_drive_spawns');
  late final _colyseus_predict_drive_spawns =
      _colyseus_predict_drive_spawnsPtr.asFunction<
          void Function(ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_spawns_t>)>();

  /// Stop driving a child (called for you by the child's own free()).
  void colyseus_predict_undrive(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<ffi.Void> child,
  ) {
    return _colyseus_predict_undrive(
      p,
      child,
    );
  }

  late final _colyseus_predict_undrivePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<ffi.Void>)>>('colyseus_predict_undrive');
  late final _colyseus_predict_undrive =
      _colyseus_predict_undrivePtr.asFunction<
          void Function(
              ffi.Pointer<colyseus_predict_t>, ffi.Pointer<ffi.Void>)>();

  /// Advance one render frame: drive every child, then the damped/extrapolate
  /// clocks and the reckon cache.
  ///
  /// RETURNS the number of fixed input steps due this frame — send exactly one
  /// input per returned step and the client stays on the server's cadence:
  ///
  /// int steps = colyseus_predict_tick(predict, now);
  /// for (int i = 0; i < steps; i++) { cmd->moveX = ...; colyseus_input_handle_send(input); }
  ///
  /// The count is 0 until a reconciler advertises the fixed step, and is capped at
  /// 5 per frame (a hitch drops the backlog rather than firing a burst).
  int colyseus_predict_tick(
    ffi.Pointer<colyseus_predict_t> p,
    double now,
  ) {
    return _colyseus_predict_tick(
      p,
      now,
    );
  }

  late final _colyseus_predict_tickPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<colyseus_predict_t>,
              ffi.Double)>>('colyseus_predict_tick');
  late final _colyseus_predict_tick = _colyseus_predict_tickPtr
      .asFunction<int Function(ffi.Pointer<colyseus_predict_t>, double)>();

  double colyseus_predict_value(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_schema_t> instance,
    ffi.Pointer<ffi.Char> field,
  ) {
    return _colyseus_predict_value(
      p,
      instance,
      field,
    );
  }

  late final _colyseus_predict_valuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_schema_t>,
              ffi.Pointer<ffi.Char>)>>('colyseus_predict_value');
  late final _colyseus_predict_value = _colyseus_predict_valuePtr.asFunction<
      double Function(ffi.Pointer<colyseus_predict_t>,
          ffi.Pointer<colyseus_schema_t>, ffi.Pointer<ffi.Char>)>(isLeaf: true);

  double colyseus_predict_value_at(
    ffi.Pointer<colyseus_predict_t> p,
    ffi.Pointer<colyseus_schema_t> instance,
    ffi.Pointer<ffi.Char> field,
    double time,
  ) {
    return _colyseus_predict_value_at(
      p,
      instance,
      field,
      time,
    );
  }

  late final _colyseus_predict_value_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_schema_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Double)>>('colyseus_predict_value_at');
  late final _colyseus_predict_value_at =
      _colyseus_predict_value_atPtr.asFunction<
          double Function(ffi.Pointer<colyseus_predict_t>,
              ffi.Pointer<colyseus_schema_t>, ffi.Pointer<ffi.Char>, double)>();

  /// Create a composite reconciler. Returns a colyseus_reconciler_t — free it with
  /// colyseus_reconciler_free() and tick it with colyseus_reconciler_tick().
  ///
  /// Read poses with colyseus_predict_value(p, source_instance, field); BOUND
  /// parts are routed there automatically. colyseus_reconciler_value(r,
  /// "part.field") remains the low-level escape hatch, and is the only way to read
  /// an OPAQUE part.
  ///
  /// Returns NULL when the fixed step can't be determined, a bound part has no
  /// scalar fields, or nothing is bound and no `adopt` was supplied.
  ffi.Pointer<colyseus_reconciler_t> colyseus_sim_reconciler_create(
    ffi.Pointer<colyseus_input_handle_t> input,
    ffi.Pointer<colyseus_room_clock_t> clock,
    colyseus_sim_step_fn step,
    ffi.Pointer<colyseus_sim_reconciler_options_t> options,
  ) {
    return _colyseus_sim_reconciler_create(
      input,
      clock,
      step,
      options,
    );
  }

  late final _colyseus_sim_reconciler_createPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<colyseus_reconciler_t> Function(
                  ffi.Pointer<colyseus_input_handle_t>,
                  ffi.Pointer<colyseus_room_clock_t>,
                  colyseus_sim_step_fn,
                  ffi.Pointer<colyseus_sim_reconciler_options_t>)>>(
      'colyseus_sim_reconciler_create');
  late final _colyseus_sim_reconciler_create =
      _colyseus_sim_reconciler_createPtr.asFunction<
          ffi.Pointer<colyseus_reconciler_t> Function(
              ffi.Pointer<colyseus_input_handle_t>,
              ffi.Pointer<colyseus_room_clock_t>,
              colyseus_sim_step_fn,
              ffi.Pointer<colyseus_sim_reconciler_options_t>)>();

  /// As above, but driven by `p`'s tick() and with the input handle's lag-comp
  /// render delay bound to the Predict's lerp delay. Prefer this in an app.
  /// (Declared here; implemented alongside colyseus_predict_reconciler.)
  ffi.Pointer<colyseus_reconciler_t> colyseus_predict_sim_reconciler(
    ffi.Pointer<colyseus_predict> p,
    ffi.Pointer<colyseus_input_handle_t> input,
    colyseus_sim_step_fn step,
    ffi.Pointer<colyseus_sim_reconciler_options_t> options,
  ) {
    return _colyseus_predict_sim_reconciler(
      p,
      input,
      step,
      options,
    );
  }

  late final _colyseus_predict_sim_reconcilerPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<colyseus_reconciler_t> Function(
                  ffi.Pointer<colyseus_predict>,
                  ffi.Pointer<colyseus_input_handle_t>,
                  colyseus_sim_step_fn,
                  ffi.Pointer<colyseus_sim_reconciler_options_t>)>>(
      'colyseus_predict_sim_reconciler');
  late final _colyseus_predict_sim_reconciler =
      _colyseus_predict_sim_reconcilerPtr.asFunction<
          ffi.Pointer<colyseus_reconciler_t> Function(
              ffi.Pointer<colyseus_predict>,
              ffi.Pointer<colyseus_input_handle_t>,
              colyseus_sim_step_fn,
              ffi.Pointer<colyseus_sim_reconciler_options_t>)>();

  /// The live object for `name`: the MIRROR (a colyseus_schema_t* of the part's
  /// vtable) for a bound part, or your `opaque` pointer. NULL when unknown.
  ffi.Pointer<ffi.Void> colyseus_sim_world_part(
    ffi.Pointer<colyseus_sim_world_t> world,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _colyseus_sim_world_part(
      world,
      name,
    );
  }

  late final _colyseus_sim_world_partPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<colyseus_sim_world_t>,
              ffi.Pointer<ffi.Char>)>>('colyseus_sim_world_part');
  late final _colyseus_sim_world_part = _colyseus_sim_world_partPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<colyseus_sim_world_t>, ffi.Pointer<ffi.Char>)>();

  /// The world handle of a sim reconciler (NULL for the flat face).
  ffi.Pointer<colyseus_sim_world_t> colyseus_sim_reconciler_world(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_sim_reconciler_world(
      r,
    );
  }

  late final _colyseus_sim_reconciler_worldPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<colyseus_sim_world_t> Function(
                  ffi.Pointer<colyseus_reconciler_t>)>>(
      'colyseus_sim_reconciler_world');
  late final _colyseus_sim_reconciler_world =
      _colyseus_sim_reconciler_worldPtr.asFunction<
          ffi.Pointer<colyseus_sim_world_t> Function(
              ffi.Pointer<colyseus_reconciler_t>)>();
}

final class colyseus_transport extends ffi.Struct {
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_transport_t> transport,
              ffi.Pointer<ffi.Char> url)>> connect;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_transport_t> transport,
              ffi.Pointer<ffi.Uint8> data, ffi.Size length)>> send;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_transport_t> transport,
              ffi.Pointer<ffi.Uint8> data, ffi.Size length)>> send_unreliable;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_transport_t> transport,
              ffi.Int code, ffi.Pointer<ffi.Char> reason)>> close;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Bool Function(ffi.Pointer<colyseus_transport_t> transport)>>
      is_open;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<colyseus_transport_t> transport)>>
      destroy;

  external colyseus_transport_events_t events;

  external ffi.Pointer<ffi.Void> impl_data;
}

typedef colyseus_transport_t = colyseus_transport;

final class colyseus_transport_events_t extends ffi.Struct {
  external colyseus_transport_on_open_fn on_open;

  external colyseus_transport_on_message_fn on_message;

  external colyseus_transport_on_close_fn on_close;

  external colyseus_transport_on_error_fn on_error;

  external ffi.Pointer<ffi.Void> userdata;
}
